--- a/package.json
+++ b/package.json
@@ -11,16 +11,18 @@
   },
   "dependencies": {
     "@formkit/tempo": "^0.1.2",
-    "@fortawesome/free-brands-svg-icons": "^6.7.1",
     "@fortawesome/free-solid-svg-icons": "^6.7.1",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "firebase": "^11.0.2",
     "react": "^18.3.1",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.3.1",
+    "react-mic": "^12.4.6",
     "react-router-dom": "^7.0.1",
     "sweetalert2": "^11.14.5",
-    "uuid": "^11.0.3"
+    "uuid": "^11.0.3",
+    "wavesurfer.js": "^7.8.11",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.16.0",
